feature(data): openapi spec, data and cleanup
