# src/controllers/smart-home.controller.ts
@@ -1,14 +1,0 @@
-// Uncomment these imports to begin using these cool features!
-
-// import {inject} from '@loopback/context';
-import {get} from '@loopback/rest';
-export interface SmartHomeHello {
-  hello: string,
-}
-export class SmartHomeController {
-  constructor() {}
-  @get('/hello')
-  hello(): string {
-    return 'Hello world!';
-  }
-}
